# claude-code-mem-plugin

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  build_and_publish_uv.sh  compose.yaml  env.example  pyproject.toml  requirements.txt  start_plugin.sh  update_version.sh  verify_injection.sh  watch_injection.sh
.claude/: settings.local.json
.claude-plugin/: README.md  install.sh  marketplace.json  plugin.json
docker/: Dockerfile
examples/: client_example.py
hooks/: post-tool.js  session-start.js  stop.js  user-prompt.js
plugin/: package.json
plugin/.claude-plugin/: install.js  marketplace.json  plugin.json
plugin/claude-code-mem/: README.md  memory_config.json  package.json
plugin/claude-code-mem/.claude-plugin/: plugin.json
plugin/claude-code-mem/hooks/: hooks.json
plugin/claude-code-mem/scripts/: debug_stop.js  diagnose_api.js  heartbeat.js  knowledge_graph_builder.js  llm_analyzer.js  memory_injector.js  post-tool.js  post_tool.js  session-start.js  session_start.js  start_worker.js  stop.js  stop_worker.js  user-prompt.js  user_prompt.js  worker.js
plugin/claude-code-mem/scripts/worker/: worker.js
plugin/claude-code-mem/scripts/worker/ui/: app.js  index.html  style.css
plugin/client/: mcp_client.py
plugin/hooks/: session-start.js  stop.js  user-prompt.js
plugin/mcp_client/: __init__.py  claude_code_hook.py
scripts/: init_db.py  setup.sh  test_analyzer.js  test_system.py  validate_plugin.py  verify_setup.py
server/: database.py  main.py  mcp_server.py  models.py  redis_cache.py
tests/: test_memory_server.py
