[project]
name = "claude-code-mem-plugin"
version = "0.1.3"
description = "Claude Code Memory Plugin Client - MCP client for remote memory server"
authors = [{name = "ferocknew"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["claude-code", "mcp", "memory", "conversation", "history", "plugin", "client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# 插件只需要这些轻量级依赖
dependencies = [
    "fastmcp>=2.14.0",
]

[project.scripts]
# 插件入口点
claude-mem-client = "client.mcp_client:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["client"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
