[project]
name = "claude-code-mem-plugin"
dynamic = ["version"]
description = "Claude Code Memory Plugin Client - MCP client for remote memory server"
authors = [{name = "ferocknew"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["claude-code", "mcp", "memory", "conversation", "history", "plugin", "client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# 插件只需要这些轻量级依赖
dependencies = [
    "fastmcp>=2.14.0",
]

[project.scripts]
# 插件入口点 - 使用 plugin 目录下的 mcp_client 模块
claude-mem-client = "plugin.mcp_client.mcp_client:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.+)"

[tool.hatch.build.targets.wheel]
packages = ["plugin"]

[tool.hatch.build.targets.sdist]
include = [
    "plugin/",
    "LICENSE",
    "README.md",
    "VERSION"
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
